// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> should render correctly Loader 1`] = `
<div
  className="Loader Loader--medium"
  id="loaderTest"
/>
`;

exports[`<Loader /> should render correctly Loader width size "large" 1`] = `
<div
  className="Loader Loader--large"
  id="loaderTest"
/>
`;

exports[`<Loader /> should render correctly Loader width size "medium" 1`] = `
<div
  className="Loader Loader--medium"
  id="loaderTest"
/>
`;

exports[`<Loader /> should render correctly Loader width size "small" 1`] = `
<div
  className="Loader Loader--small"
  id="loaderTest"
/>
`;
